--- a/content/project/internal-project_lII/index.html
+++ b/content/project/internal-project_lII/index.html
@@ -25,38 +25,34 @@ url_video: ""
 
 <p>This is the ggplot using an open-source article in finance and how to use it.</p>
 <pre class="r"><code>#install.packages(&quot;MASS&quot;)
-library(MASS)
-library(ggplot2)
-head(Cars93)</code></pre>
-<pre><code>##   Manufacturer   Model    Type Min.Price Price Max.Price MPG.city MPG.highway
-## 1        Acura Integra   Small      12.9  15.9      18.8       25          31
-## 2        Acura  Legend Midsize      29.2  33.9      38.7       18          25
-## 3         Audi      90 Compact      25.9  29.1      32.3       20          26
-## 4         Audi     100 Midsize      30.8  37.7      44.6       19          26
-## 5          BMW    535i Midsize      23.7  30.0      36.2       22          30
-## 6        Buick Century Midsize      14.2  15.7      17.3       22          31
-##              AirBags DriveTrain Cylinders EngineSize Horsepower  RPM
-## 1               None      Front         4        1.8        140 6300
-## 2 Driver &amp; Passenger      Front         6        3.2        200 5500
-## 3        Driver only      Front         6        2.8        172 5500
-## 4 Driver &amp; Passenger      Front         6        2.8        172 5500
-## 5        Driver only       Rear         4        3.5        208 5700
-## 6        Driver only      Front         4        2.2        110 5200
-##   Rev.per.mile Man.trans.avail Fuel.tank.capacity Passengers Length Wheelbase
-## 1         2890             Yes               13.2          5    177       102
-## 2         2335             Yes               18.0          5    195       115
-## 3         2280             Yes               16.9          5    180       102
-## 4         2535             Yes               21.1          6    193       106
-## 5         2545             Yes               21.1          4    186       109
-## 6         2565              No               16.4          6    189       105
-##   Width Turn.circle Rear.seat.room Luggage.room Weight  Origin          Make
-## 1    68          37           26.5           11   2705 non-USA Acura Integra
-## 2    71          38           30.0           15   3560 non-USA  Acura Legend
-## 3    67          37           28.0           14   3375 non-USA       Audi 90
-## 4    70          37           31.0           17   3405 non-USA      Audi 100
-## 5    69          39           27.0           13   3640 non-USA      BMW 535i
-## 6    69          41           28.0           16   2880     USA Buick Century</code></pre>
-<pre class="r"><code># now we can create a plot
-
-#ggplot(penguins,aes(bill_length_mm,bill_depth_mm,color=species))+
+#library(MASS)
+#library(ggplot2)
+#head(Cars93)
+library(tidyverse)</code></pre>
+<pre><code>## -- Attaching packages --------------------------------------- tidyverse 1.3.1 --</code></pre>
+<pre><code>## v ggplot2 3.3.5     v purrr   0.3.4
+## v tibble  3.1.5     v dplyr   1.0.7
+## v tidyr   1.1.4     v stringr 1.4.0
+## v readr   2.0.2     v forcats 0.5.1</code></pre>
+<pre><code>## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code>bike&lt;- read.csv(&#39;bikeshare.csv&#39;)
+# now we can create a plot
+head(bike)</code></pre>
+<pre><code>##              datetime season holiday workingday weather temp  atemp humidity
+## 1 2011-01-01 00:00:00      1       0          0       1 9.84 14.395       81
+## 2 2011-01-01 01:00:00      1       0          0       1 9.02 13.635       80
+## 3 2011-01-01 02:00:00      1       0          0       1 9.02 13.635       80
+## 4 2011-01-01 03:00:00      1       0          0       1 9.84 14.395       75
+## 5 2011-01-01 04:00:00      1       0          0       1 9.84 14.395       75
+## 6 2011-01-01 05:00:00      1       0          0       2 9.84 12.880       75
+##   windspeed casual registered count
+## 1    0.0000      3         13    16
+## 2    0.0000      8         32    40
+## 3    0.0000      5         27    32
+## 4    0.0000      3         10    13
+## 5    0.0000      0          1     1
+## 6    6.0032      0          1     1</code></pre>
+<pre class="r"><code>#ggplot(penguins,aes(bill_length_mm,bill_depth_mm,color=species))+
   #geom_point()</code></pre>
