--- a/content/project/internal-project_VI/indexSeaborn-Exercise.html
+++ b/content/project/internal-project_VI/indexSeaborn-Exercise.html
@@ -702,7 +702,7 @@ plt.xlabel(‘Age in Years’)
 <td><img src="/img/Seaborn-Exercise_13_1.png" alt="" /></td>
 </tr>
 <tr class="even">
-<td><img src="Seaborn-Exercise_13_1.png" alt="png" /></td>
+<td>#<img src="Seaborn-Exercise_13_1.png" alt="png" /></td>
 </tr>
 <tr class="odd">
 <td>```python</td>
