--- a/content/project/internal_project_V/indexCredit_Approval_Final.html
+++ b/content/project/internal_project_V/indexCredit_Approval_Final.html
@@ -425,7 +425,7 @@ print(credit_info)
 
 print(&#39;\n&#39;)
 </code></pre>
-<p><img src="/img3/Credit_Approval_Final_8_0" alt="" /></p>
+<p><img src="/img/Credit_Approval_Final_8_0.png" alt="" /></p>
 <pre><code>&lt;class &#39;pandas.core.frame.DataFrame&#39;&gt;
 RangeIndex: 690 entries, 0 to 689
 Data columns (total 16 columns):
